# galaxydisksize

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  environment.yml  pyproject.toml  quality-gate.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
binder/: README.md  environment.yml  postBuild
config/: config.yaml  data_sources.yaml
containers/: Apptainer.def  Dockerfile
data/: MIGHTEE_D_HI_M_HI_rajohnson22.txt  ReadMe  amiga_full_catalogue_logd25.csv  angmom_final.csv  bok_hyperleda_pair_matches.csv  bok_hyperleda_pair_unmatched.csv  broelis-rhee.txt  cig-d25-w-error.txt  cig_revised_positions.txt  config_hcg_galaxies.yaml  config_hcg_positions.yaml  config_isolated_galaxies.yaml  diameter_mass_interacting_star.txt  hi_detection_catalogue_reynolds.fits  hi_nondetection_catalogue_reynolds.fits  hyperleda_logd25_verification.csv  interacting_galaxies_results.csv  interacting_galaxies_results_with_upperlimits.csv  interacting_galaxies_results_with_upperlimits_bmaj.csv  investigation_fitted_vs_unfitted.csv  isolated_galaxies_results.csv  jones-detectionsd25.txt  phase3_upperlimits_provenance.csv  reynolds_hyperleda_detection_matches.csv  reynolds_hyperleda_detection_unmatched.csv  upperlimits_bmaj_provenance.csv  wang-surveys-table.txt  wang-surveys-table_original.txt
data/demo/: CIG314_sd.fits  CIG553_sd.fits
data/moment0_maps/CIG-MOMMAPS-SOFIA/: CIG1000_mom0.fits  CIG1004_mom0.fits  CIG1006_mom0.fits  CIG1019_mom0.fits  CIG102_mom0.fits  CIG103_mom0.fits  CIG123_mom0.fits  CIG147_mom0.fits  CIG159_mom0.fits  CIG188_mom0.fits  CIG232_mom0.fits  CIG240_mom0.fits  CIG314_mom0.fits  CIG329_mom0.fits  CIG359_mom0.fits  CIG361_mom0.fits  CIG421_mom0.fits  CIG463_mom0.fits  CIG512_mom0.fits  CIG551_mom0.fits  CIG553_mom0.fits  CIG571_mom0.fits  CIG581_mom0.fits  CIG587_mom0.fits  CIG604_mom0.fits  CIG626_mom0.fits  CIG660_mom0.fits  CIG676_mom0.fits  CIG736_mom0.fits  CIG744_mom0.fits  CIG812_mom0.fits  CIG96_mom0.fits  CIG983_mom0.fits  CIG988_mom0.fits
data/moment0_maps/MOMMAPS-BAROLO-DHI/: RESULTS_OPT.csv
data/moment0_maps/SoFiA_masks/: AGC242021_cut_sd_nan.fits  AGC732898_cut_sd_nan.fits  HCG10a_cut_sd_nan.fits  HCG10d_cut_sd_nan.fits  HCG15f_cut_sd_nan.fits  HCG16a_cut_sd_nan.fits  HCG16b_cut_sd_nan.fits  HCG16c_cut_sd_nan.fits  HCG16d_cut_sd_nan.fits  HCG19b_cut_sd_nan.fits  (+46 more)
docs/: data-and-provenance.md  development.md  index.md  installation.md  usage.md
latex/: hi_disk_size_environments.tex  hi_disk_size_environments_referee.tex  histogram_shape.tex  reference.bib
notebooks/: demo.ipynb
scripts/: README.md  build_hcg_catalogue.py  crossmatch_bok_hyperleda.py  crossmatch_reynolds_hyperleda.py  export_amiga_optical_diameters.py  figure_style.py  fit_size_mass_relation.py  flag_beam_upper_limits.py  measure_hi_disk_sizes.py  measure_size_residuals.py  plot_diameter_correlation.py  plot_pairwise_clique_euler.py  plot_residual_histogram.py  plot_residuals_by_phase.py  plot_size_mass_all_surveys.py  plot_size_mass_amiga_hcgs.py  plot_survey_residual_forest.py  project_config.py  size_residual_baseline_engine.py  survival_analysis.py  write_size_mass_macros.py
src/galaxydisksize/: __init__.py  cli.py  ellipse.py  estimators.py  io.py  masssize.py  residual.py  surface_density.py  survival.py
tests/: test_ellipse.py  test_estimators.py  test_golden_numbers.py  test_masssize.py  test_residual.py  test_surface_density.py  test_survival.py
workflow/: Snakefile
workflow/rules/: catalogue.smk  figures.smk  inference.smk  paper.smk
(+173 files in other folders)
